Ensured use of cropped image on homepage

--- a/app/assets/stylesheets/stylesheet.scss
+++ b/app/assets/stylesheets/stylesheet.scss
@@ -188,6 +188,7 @@ header {
 /* ----- =animation ----- */
 
 .waterdog {
+  padding-top: 1em;
   -webkit-animation: bounce 5s infinite;
   -moz-animation: bounce 5s infinite;
   -o-animation: bounce 5s infinite;
